# Schedule

./: .gitignore  CMakeLists.txt  README.md  TESTRESULT
include/: io.h  schedule.h  structures.h  utils.h
src/: io.c  main.c  schedule.c  utils.c
